--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "travelai",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite --mode development",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "node server-env.js",
+    "build:client": "vite build --outDir dist/client --ssrManifest",
+    "build:server": "vite build --outDir dist/server --ssr src/entry-server.js ",
+    "build": "npm build:client && npm build:server",
+    "preview": "npm build && node server.js"
   },
   "dependencies": {
     "@vue/server-renderer": "^3.2.26",
@@ -21,6 +23,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
     "@vue/compiler-sfc": "^3.2.26",
+    "koa": "^2.13.4",
+    "koa-static": "^5.0.0",
     "vite": "^2.7.2"
   }
 }
