--- a/package.json
+++ b/package.json
@@ -2,19 +2,21 @@
   "name": "travelai",
   "version": "0.0.0",
   "scripts": {
-    "dev": "node server-env.js",
-    "build:client": "vite build --outDir dist/client --ssrManifest",
-    "build:server": "vite build --outDir dist/server --ssr src/entry-server.js ",
+    "dev": "node server",
     "build": "npm run build:client && npm run build:server",
-    "preview": "npm run build && node server.js"
+    "build:noExternal": "npm run build:client && npm run build:server:noExternal",
+    "build:client": "vite build --ssrManifest --outDir dist/client",
+    "build:server": "vite build --ssr src/entry-server.js --outDir dist/server",
+    "build:server:noExternal": "vite build --config vite.config.noexternal.js --ssr src/entry-server.js --outDir dist/server",
+    "generate": "vite build --ssrManifest --outDir dist/static && npm run build:server && node prerender",
+    "serve": "cross-env NODE_ENV=production node server",
+    "debug": "node --inspect-brk server"
   },
   "dependencies": {
     "@vue/server-renderer": "^3.2.26",
     "@vueuse/head": "^0.7.4",
     "axios": "^0.21.0",
-    "express": "^4.17.2",
     "url-template": "^2.0.8",
-    "vite-ssr": "^0.14.3",
     "vue": "^3.2.25",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2",
@@ -22,9 +24,11 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
-    "@vue/compiler-sfc": "^3.2.26",
-    "koa": "^2.13.4",
-    "koa-static": "^5.0.0",
+    "@vitejs/plugin-vue-jsx": "^1.3.3",
+    "compression": "^1.7.4",
+    "cross-env": "^7.0.3",
+    "express": "^4.17.2",
+    "serve-static": "^1.14.2",
     "vite": "^2.7.2"
   }
 }
