--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "vue3-vite-ssr",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "npm run tsc && vite build",
-    "serve": "vite preview",
+    "dev": "node server",
+    "build": "npm run tsc && npm run build:client && npm run build:server",
+    "build:client": "vite build --ssrManifest --outDir dist/client",
+    "build:server": "vite build --ssr src/entry-server.js --outDir dist/server",
+    "serve": "cross-env NODE_ENV=production node server",
     "tsc": "vue-tsc --noEmit"
   },
   "dependencies": {
@@ -16,6 +18,11 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
+    "@vitejs/plugin-vue-jsx": "^1.3.3",
+    "compression": "^1.7.4",
+    "cross-env": "^7.0.3",
+    "express": "^4.17.2",
+    "serve-static": "^1.14.2",
     "typescript": "^4.5.4",
     "vite": "^2.7.2",
     "vue-tsc": "^0.30.2"
