--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "dependencies": {
     "@vueuse/head": "^0.7.4",
     "axios": "^0.24.0",
+    "qs": "^6.10.2",
+    "url-template": "^2.0.8",
     "vue": "^3.2.25",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@types/qs": "^6.9.7",
+    "@types/url-template": "^2.0.28",
     "@vitejs/plugin-vue": "^2.0.0",
     "typescript": "^4.5.4",
     "vite": "^2.7.2",
