--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "tsc": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@toast-ui/editor": "^3.1.2",
     "@vueuse/head": "^0.7.4",
     "axios": "^0.24.0",
     "qs": "^6.10.2",
