--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@toast-ui/editor": "^3.1.2",
+    "@toast-ui/editor-plugin-color-syntax": "^3.0.2",
+    "@toast-ui/editor-plugin-table-merged-cell": "^3.0.1",
     "@vueuse/head": "^0.7.4",
     "axios": "^0.24.0",
     "qs": "^6.10.2",
